# api.starknet.quest

./: .deployignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  config.template.toml  db-docker-compose.yml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: testnet_deploy.yml
src/: config.rs  logger.rs  main.rs  middleware.rs  models.rs  utils.rs
src/common/: get_achievement.rs  has_deployed_time.rs  mod.rs  verify_has_nft.rs  verify_has_root_domain.rs  verify_has_root_or_braavos_domain.rs  verify_quiz.rs
src/endpoints/: get_boosted_quests.rs  get_completed_boosts.rs  get_completed_quests.rs  get_deployed_time.rs  get_quest.rs  get_quest_category.rs  get_quest_participants.rs  get_quests.rs  get_quiz.rs  get_tasks.rs  get_trending_quests.rs  has_completed_quest.rs  mod.rs  unique_page_visit.rs
src/endpoints/achievements/: fetch.rs  fetch_buildings.rs  mod.rs  verify_achieved_quests.rs  verify_avnu.rs  verify_briq.rs  verify_default.rs  verify_has_domain.rs  verify_quests.rs  verify_seniority.rs  verify_tvl.rs  verify_whitelisted.rs
src/endpoints/achievements/batched/: mod.rs  verify_tvl_batched.rs
src/endpoints/achievements/claim/: mod.rs  quests_achievement.rs
src/endpoints/achievements/claim_nft/: quests_achievement.rs
src/endpoints/achievements/quests/: claim_quest_achievement.rs  mod.rs
src/endpoints/admin/: delete_task.rs  get_quest_details.rs  get_quests.rs  login.rs  mod.rs  remove_boost.rs  update_boost.rs  update_quest.rs  update_quest_visibility.rs
src/endpoints/admin/balance/: create_balance.rs  mod.rs  update_balance.rs
src/endpoints/admin/contract/: create_contract.rs  mod.rs  update_contract.rs
src/endpoints/admin/custom/: create_custom.rs  mod.rs  update_custom.rs
src/endpoints/admin/custom_api/: create_custom_api.rs  mod.rs  update_custom_api.rs
src/endpoints/admin/discord/: create_discord.rs  mod.rs  update_discord.rs
src/endpoints/analytics/: get_quest_activity.rs  get_quest_participation.rs  get_unique_visitors.rs  mod.rs
src/endpoints/defi/: mod.rs  rewards.rs
src/endpoints/discover/: mod.rs
src/endpoints/leaderboard/: get_ranking.rs  get_static_info.rs  mod.rs
src/endpoints/quest_boost/: get_boost.rs  get_boosts.rs  get_claim_params.rs  get_completed_boosts.rs  get_pending_claims.rs  get_quests.rs  mod.rs  update_claim_status.rs
src/endpoints/quests/: claimable.rs  contract_uri.rs  discord_fw_callback.rs  mod.rs  uri.rs  verify_balance.rs  verify_contract.rs  verify_custom_api.rs  verify_domain.rs  verify_quiz.rs  verify_twitter_fw.rs  verify_twitter_rw.rs
src/middleware/: auth.rs
src/router/: admin_router.rs  admin_routes.rs  mod.rs
tests/: endpoints.rs
(+306 files in other folders)
