[package]
name = "quest_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs", rev = "c974e5cb42e8d8344cee910b76005ec46b4dd3ed" }
starknet-id = { git = "https://github.com/starknet-id/starknet-id.rs.git", rev = "2b30c2453b96789a628c86d2edebb1023fa2e77d" }
serde_derive = "1.0.183"
env_logger = "0.10.0"
axum_auto_routes = { git = "https://github.com/Th0rgal/axum_auto_routes.git", rev = "f9e1d2083e887cd264642359c4aa851938da6f09" }
axum = { version = "0.6.17", features = ["headers"] }
toml = "0.5.10"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.0", features = ["cors"] }
mongodb = "2.4.0"
futures = "0.3.28"
reqwest = { version = "0.11.17", features = ["json"] }
rand = "0.8.5"
async-trait = "0.1.68"
percent-encoding = "2.3.1"
chrono = "0.4.19"
lazy_static = "1.4.0"
regex = "1.10.0"
ctor = "0.2.6"
axum-client-ip = "0.4.0"
jsonwebtoken = "9"
tower = "0.4.13"
